--- a/ha-protonmail-bridge/config.json
+++ b/ha-protonmail-bridge/config.json
@@ -1,7 +1,7 @@
 {
-    "name": "Pronton mail bridge for HA",
+    "name": "ProtonMail bridge for HA",
     "version": "0.0.1",
     "slug": "protonmailbridge",
-    "description": "Addon to instal Protonmail Bridge. Allow to use a Prontonmail account to send emails.",
+    "description": "Addon to install ProtonMail Bridge. Allow to use a ProtonMail account to send emails.",
     "arch": ["armv7"]
 }
