Startup option set to `system`
* This addon has no dependency so it can start early. The startup option
is set to `system`

--- a/ha-protonmail-bridge/config.json
+++ b/ha-protonmail-bridge/config.json
@@ -5,7 +5,7 @@
     "description": "Install ProtonMail Bridge in Home Assistant. Allow to use a ProtonMail account to send emails",
     "url": "https://github.com/fboulay/addon-ha-protonmail-bridge",
     "boot": "auto",
-    "startup": "application",
+    "startup": "system",
     "arch": ["armv7"],
     "ports": {
         "25/tcp": null
