--- a/ha-protonmail-bridge/config.json
+++ b/ha-protonmail-bridge/config.json
@@ -7,6 +7,7 @@
     "boot": "auto",
     "startup": "system",
     "arch": ["armv7", "amd64"],
+    "image": "fboulay/ha-protonmail-bridge",
     "ports": {
         "25/tcp": null
     },
