--- a/ha-protonmail-bridge/config.json
+++ b/ha-protonmail-bridge/config.json
@@ -1,13 +1,13 @@
 {
     "name": "ProtonMail bridge for HA",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "slug": "pmb",
     "description": "Install ProtonMail Bridge in Home Assistant. Allow to use a ProtonMail account to send emails",
     "url": "https://github.com/fboulay/addon-ha-protonmail-bridge",
     "boot": "auto",
     "startup": "system",
     "arch": ["armv7", "amd64"],
-    "image": "fboulay/ha-protonmail-bridge",
+    "image": "fboulay/ha-protonmail-bridge-{arch}",
     "ports": {
         "25/tcp": null
     },
