--- a/.github/workflows/ha-protonmail-bridge.yml
+++ b/.github/workflows/ha-protonmail-bridge.yml
@@ -12,12 +12,12 @@ jobs:
       -
         name: Check out the repo
         uses: actions/checkout@v2
-      -
+      - 
         name: Read config file
         id: config_file
-        run: |
-          content=`cat ./ha-protonmail-bridge/config.json`
-          echo "::set-output name=file::$content"
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./ha-protonmail-bridge/config.json
       -
         name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -42,6 +42,6 @@ jobs:
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/v${{fromJson(steps.config_file.outputs.file).version}}",
+              ref: "refs/tags/v${{ fromJSON(steps.config_file.outputs.content).version }}",
               sha: context.sha
             })
