--- a/.github/workflows/ha-protonmail-bridge.yml
+++ b/.github/workflows/ha-protonmail-bridge.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     types: [ closed ]
 
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -33,6 +34,22 @@ jobs:
             --target ha-protonmail-bridge \
             --amd64 \
             --armv7
+      -
+        name: Update Docker Hub description armv7
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: fboulay/ha-protonmail-bridge-armv7
+          readme-filepath: ./ha-protonmail-bridge/DOCS.md
+      -
+        name: Update Docker Hub description amd64
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: fboulay/ha-protonmail-bridge-amd64
+          readme-filepath: ./ha-protonmail-bridge/DOCS.md
       -
         name: Git tag
         uses: actions/github-script@v3
