--- a/.github/workflows/ha-protonmail-bridge.yml
+++ b/.github/workflows/ha-protonmail-bridge.yml
@@ -41,7 +41,7 @@ jobs:
         uses: peter-evans/dockerhub-description@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: fboulay/ha-protonmail-bridge-armv7
           readme-filepath: ./ha-protonmail-bridge/DOCS.md
       -
@@ -49,7 +49,7 @@ jobs:
         uses: peter-evans/dockerhub-description@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: fboulay/ha-protonmail-bridge-amd64
           readme-filepath: ./ha-protonmail-bridge/DOCS.md
       -
