--- a/ha-protonmail-bridge/config.json
+++ b/ha-protonmail-bridge/config.json
@@ -1,6 +1,6 @@
 {
     "name": "ProtonMail bridge for HA",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "slug": "pmb",
     "description": "Install ProtonMail Bridge in Home Assistant. Allow to use a ProtonMail account to send emails",
     "url": "https://github.com/fboulay/addon-ha-protonmail-bridge",
@@ -8,6 +8,7 @@
     "startup": "system",
     "arch": ["armv7", "amd64"],
     "image": "fboulay/ha-protonmail-bridge-{arch}",
+    "auth_api": true,
     "ports": {
         "25/tcp": null
     },
