--- a/ha-protonmail-bridge/config.json
+++ b/ha-protonmail-bridge/config.json
@@ -1,21 +1,24 @@
 {
-    "name": "ProtonMail bridge for HA",
+    "name": "ProtonMail bridge",
     "version": "1.3.3",
     "slug": "pmb",
     "description": "Install ProtonMail Bridge in Home Assistant. Allow to use a ProtonMail account to send emails",
     "url": "https://github.com/fboulay/addon-ha-protonmail-bridge",
     "boot": "auto",
     "startup": "system",
-    "arch": ["armv7", "amd64"],
+    "arch": [
+        "armv7",
+        "amd64"
+    ],
     "image": "fboulay/ha-protonmail-bridge-{arch}",
     "auth_api": true,
     "ports": {
         "25/tcp": null
     },
-    "ports_description":{
+    "ports_description": {
         "25/tcp": "SMTP port. 25 is the default for SMTP servers."
     },
-    "options":{
+    "options": {
         "username": null,
         "password": null,
         "two_factor_code": ""
